# FA24-GPR-200-Example

./: CMakeLists.txt
assignments/instancing/: CMakeLists.txt  main.cpp
assignments/instancing/assets/: litInstanced.vert  skybox.vert
assignments/proceduralGeometry/: CMakeLists.txt  main.cpp
assignments/proceduralGeometry/assets/: litInstanced.vert  skybox.frag
core/ew/: mesh.cpp  mesh.h  procGen.cpp  procGen.h
